--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,4 +2,4 @@ set -g history-limit 100000
 set -g status-left-length 100
 set -g status-left '#[fg=green] #T#[default]'
 setw -g automatic-rename off
-set-window-option -g mode-keys vi
+setw -g mode-keys vi
