--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,3 +3,4 @@ set -g status-left-length 100
 set -g status-left '#[fg=green] #T#[default]'
 setw -g automatic-rename off
 setw -g mode-keys vi
+set -g prefix C-a
